# full-stack-fastapi-documentdb

./: .gitignore  DOCUMENTDB_MIGRATION_WALKTHROUGH.md  README.md  copier.yml  dev-local.sh  dev-start.sh  docker-compose.override.yml  docker-compose.yml  env.example
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: crud.py  initial_data.py  main.py  models.py  tests_pre_start.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: items.py  users.py
backend/app/api/routes/: items.py  login.py  private.py  users.py
backend/app/core/: config.py  db.py
backend/app/crud/: __init__.py  base.py  crud_item.py  crud_user.py
backend/app/db/: mongodb.py
backend/app/schemas/: __init__.py  item.py  user.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_items.py  test_login.py  test_private.py  test_users.py
backend/app/tests/crud/: test_user.py
backend/app/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/app/tests/utils/: item.py  user.py
backend/tests/: test_main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
